infra/k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amfit-api
  namespace: amfit
  labels:
    app.kubernetes.io/name: "amfit-api"
    app.kubernetes.io/component: "api"
    app.kubernetes.io/managed-by: "argocd"
    environment: "dev"
    lab_id: "lab-k8s-01"
    lab_owner: "jose.mussauer"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: "amfit-api"
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
