infra/k8s/api/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: amfit-api
  namespace: amfit
  labels:
    app.kubernetes.io/name: "amfit-api"
    app.kubernetes.io/component: "api"
    app.kubernetes.io/managed-by: "argocd"
    environment: "dev"
    lab_id: "lab-k8s-01"
    lab_owner: "jose.mussauer"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.amfit.local`)
      kind: Rule
      services:
        - name: amfit-api
          port: 8080
  tls: {}
